force-app/main/default/objects/OrderItem/fields/Commissioning_Product__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Product__c</fullName>
    <formula>Product2.Commissioning_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioning Product?</label>
    <type>Checkbox</type>
</CustomField>