force-app/main/default/objects/OrderItem/fields/ERP_Order_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Line_Number__c</fullName>
    <label>ERP Order Line Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>