force-app/main/default/objects/OrderItem/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <label>Line #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>