force-app/main/default/objects/OrderItem/fields/Pro__c.field-meta.xml
<CustomField>
    <fullName>Pro__c</fullName>
    <label>Pro #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>