force-app/main/default/objects/OrderItem/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>–	Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>–	Sq. M.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>